# TrackerFM

./: .cache  .env  .gitignore  README.md  main.py  main_backup.py  pyproject.toml
controllers/: auth.py  deezer.py  social.py  spotify.py
database/: db.py  trackerfmm.sql
models/: usuarios.py
src/: __init__.py
src/controllers/: __init__.py  auth.py  social.py
src/database/: __init__.py  db.py
src/models/: __init__.py  usuarios.py
src/views/: __init__.py  actividad.py  busqueda.py  home.py  login.py  perfil.py  perfil_artista.py  perfil_publico.py  recuperar.py  registro.py  resena_cancion.py  splash.py  usuarios.py  vista_album.py
views/: actividad.py  busqueda.py  home.py  login.py  perfil.py  perfil_artista.py  perfil_publico.py  recuperar.py  registro.py  resena_cancion.py  splash.py  usuarios.py  vista_album.py
