[project]
name = "trackerfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.25.0",
    "mysql-connector-python>=9.3.0",
    "bcrypt>=4.3.0",
    "pygame>=2.6.1",
    "requests>=2.32.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
app = "main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
